--- a/registry.yaml
+++ b/registry.yaml
@@ -1789,7 +1789,7 @@
     - usage-api
     - cost-api
 
-- title: Build Your Own Code Interpreter: Empowering LLM Agents with Dynamic Tool Calling
+- title: Build Your Own Code Interpreter - Empowering LLM Agents with Dynamic Tool Calling
   path: examples/object_oriented_agentic_approach/Secure_code_interpreter_tool_for_LLM_agents.ipynb
   date: 2025-01-26
   authors:
